





import java.util.List;
import java.util.ArrayList;

public class Type  {






    private Relational_Column relational_column;


    public Type(
    ) {
    }



    public Relational_Column getRelational_column() {
        return relational_column;
    }

    public void setRelational_column(Relational_Column relational_column) {
        this.relational_column = relational_column;
    }

}