





import java.util.List;
import java.util.ArrayList;

public class Organization_tutorial_Item  {






    private tutorial_Organization_Ref tutorial_organization_ref;


    public Organization_tutorial_Item(
    ) {
    }



    public tutorial_Organization_Ref getTutorial_organization_ref() {
        return tutorial_organization_ref;
    }

    public void setTutorial_organization_ref(tutorial_Organization_Ref tutorial_organization_ref) {
        this.tutorial_organization_ref = tutorial_organization_ref;
    }

}