





import java.util.List;
import java.util.ArrayList;

public class SubOrg1_sb1C  {






    private tutorial_Loan tutorial_loan;


    public SubOrg1_sb1C(
    ) {
    }



    public tutorial_Loan getTutorial_loan() {
        return tutorial_loan;
    }

    public void setTutorial_loan(tutorial_Loan tutorial_loan) {
        this.tutorial_loan = tutorial_loan;
    }

}