





import java.util.List;
import java.util.ArrayList;

public class SubOrg2_sb2C  {






    private tutorial_Organization_Librarian tutorial_organization_librarian;


    public SubOrg2_sb2C(
    ) {
    }



    public tutorial_Organization_Librarian getTutorial_organization_librarian() {
        return tutorial_organization_librarian;
    }

    public void setTutorial_organization_librarian(tutorial_Organization_Librarian tutorial_organization_librarian) {
        this.tutorial_organization_librarian = tutorial_organization_librarian;
    }

}