





import java.util.List;
import java.util.ArrayList;

public class tutorial_Organization_Ref extends Library {




    public tutorial_Organization_Ref(
    ) {
        super(
        );
    }




}