@startuml
class Employee {
}
class Library {
}
class Organization_tutorial_Item {
}
class SubOrg1_sb1C {
}
class SubOrg2_sb2C {
}
enum Type {
  asd
}
class tutorial_Book {
  + copies : str
  + name : str
  + isAvailable(tutorial_param1 : str, tutorial_param2 : str) : bool
}
class tutorial_Library {
  + name : str
}
class tutorial_Loan {
  + date : date
}
class tutorial_Member {
  + name : str
  + tespOP() : void
}
class tutorial_Organization_Librarian {
  + orgOpp() : str
}
class tutorial_Organization_Ref {
}
class tutorial_SubOrg1_sb1C {
}
class tutorial_SubOrg2_sb2C {
}
Employee <|-- tutorial_Organization_Librarian
Library <|-- tutorial_Organization_Ref
Organization_tutorial_Item "0..1" -- "1..1" tutorial_Organization_Ref : RefOutsideEcore20
SubOrg1_sb1C "1..1" -- "1..1" tutorial_Loan : book14
tutorial_Book "0..9999" --* "1..1" tutorial_Library : books0
tutorial_Book "0..9999" -- "1..1" tutorial_Member : books11
tutorial_Book "1..1" -- "0..1" tutorial_Library : library4
tutorial_Library "0..1" -- "1..1" tutorial_Member : library7
tutorial_Library "1..1" *-- "0..9999" tutorial_Loan : loans1
tutorial_Book "1..1" -- "0..9999" tutorial_Loan : loans5
tutorial_Loan "0..9999" -- "1..1" tutorial_Member : loans9
tutorial_Loan "1..1" -- "1..1" tutorial_Member : member16
tutorial_Library "1..1" *-- "0..9999" tutorial_Member : members2
SubOrg2_sb2C "0..1" -- "1..1" tutorial_Organization_Librarian : workOn19
@enduml